--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://Senpxi69.github.io/amazon-clone",
+  "homepage": "/",
   "name": "my-amazon-clone",
   "version": "0.1.0",
   "private": true,
